# napkin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES_RUST.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  pages.yml  security.yml
docs/: index.html  style.css
src/: App.svelte  app.css
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs
src/components/: AboutDialog.svelte  AlignmentTools.svelte.old  Canvas.svelte  ContextMenu.svelte  HelpDialog.svelte  LayersPanel.svelte  Menu.svelte  MultiSelectToolbar.svelte  PresentationOverlay.svelte  PropertiesPanel.svelte.old  SettingsDialog.svelte  Sidebar.svelte  TabBar.svelte  ToolFlyout.svelte  ToolIcon.svelte  Toolbar.svelte  VersionHistoryDialog.svelte  WelcomeDialog.svelte  ZOrderControls.svelte.old  ZoomControls.svelte.old
src/components/sidebar/: AlignmentButtons.svelte  ColorPicker.svelte  EndpointSelector.svelte  OpacitySlider.svelte  RecentColorsPalette.svelte  RoughnessSlider.svelte  RoutingModeButtons.svelte  StrokeStyleButtons.svelte  StrokeWidthSlider.svelte  ZOrderButtons.svelte
src/lib/: types.ts
src/lib/api/: handler.test.ts  handler.ts
src/lib/canvas/: culling.ts  endpointRenderer.ts  hitDetection.ts  renderer.ts  roughRenderer.ts  shapeRenderer.ts  strokeStyles.ts
(+72 files in other folders)
